# Wazuh_Custom_Client

./: CMakeLists.txt  README.md
include/: ConfigParser.h  Constants.h  DataCollector.h  Logger.h  ManagerConnection.h
src/: ConfigParser.cpp  DataCollector.cpp  Logger.cpp  ManagerConnection.cpp  main.cpp
